# pyphonetics

./: .gitignore  LICENSE.rst  README.md  README.rst  flit.ini  pyproject.toml
pyphonetics/: __init__.py  exceptions.py  utils.py
pyphonetics/distance_metrics/: __init__.py  hamming.py  levenshtein.py
pyphonetics/phonetics/: __init__.py  daitch_mokotoff.py  fuzzy_soundex.py  lein.py  metaphone.py  mra.py  phonetic_algorithm.py  refined_soundex.py  soundex.py
tests/: test_corner_cases.py  test_distances.py  test_phonetics.py  test_utils.py
